# parser

./: .gitignore  Cargo.toml  README
data/: ntfs_info.map.yaml
data/archive/compressed/: machine1_2025.7z
data/archive/decompressed/machine1_2025/: SAM  Test_2NTFSInfo.csv
data/parser/: NTFSError.csv
docker/: compose.yaml  reset_docker.sh
docker/clickhouse/config.d/: config.xml
docker/clickhouse/user.d/: lowmem.xml
docker/jupyter/: Dockerfile  build.sh  compose.yaml  requirements.txt
docker/kafka/: Dockerfile  build.sh  compose.yaml  start.sh
jupyter/: connections.ini
jupyter/notebooks/: 1-stats.ipynb  ClickhouseBasic.ipynb  srum.ipynb
src/: archive_parser.rs  configuration.rs  errors.rs  lib.rs  output.rs
src/input/: csv.rs  csv_mapping.rs  evtx.rs  hive.rs  mod.rs  srum.rs  srum_model.rs
src/writer/: clickhouse_config.rs  clickhouse_writer.rs  file_writer.rs  kafka.rs  mod.rs
