[package]
name = "parser"
version = "0.1.0"
edition = "2024"

[lib]
name = "parser"
path = "src/lib.rs"


[dependencies]
async-trait = "0.1.86"
base64 = "0.22.1"
blake3 = "1.6.1"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive"] }
clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs.git", features = [
    "inserter",
    "chrono",
] }

clickhouse-derive = "0.2.0"
csv = "1.3.1"
evtx = "0.8.4"
flume = "0.11.1"
libesedb = "0.2.5"
log = "0.4.25"
log4rs = { version = "1.3.0", features = ["all_components", "gzip"] }
nt-hive = { git = "https://github.com/adsalais/nt-hive.git" }
rand = "0.9.0"
rdkafka = { version = "0.37.0", features = ["zstd", "ssl-vendored"] }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
serde_yml = "0.0.12"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
zerocopy = "0.8.17"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"

[profile.release]
strip = "debuginfo"
lto = true
panic = "abort"
codegen-units = 1
debug = false
